TP-3260: fix spacing for subhead on desktop

--- a/drupal/sites/all/themes/fresh/sass/article.scss
+++ b/drupal/sites/all/themes/fresh/sass/article.scss
@@ -63,7 +63,10 @@ h1.title{
   margin: 0 auto;
 }
 .headline{
-  margin: 20px inherit;
+  margin-top: 20px;
+  margin-right: inherit;
+  margin-left: inherit;
+  margin-bottom: 30px;
   @include breakpoint($breakpoint-tablet){
     text-align: center;
   }
